--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
             <span style="--i:14">A</span>
         </div>
         <h1 id="game">
-            Anda mempunya 5 kesempatan
+            Anda mempunyai 5 kesempatan
         </h1>
         <a href="" id="mulai">Mulai</a>
     </div>
     <div class="inputan1" id="inputan1">
-        <h1>Masukkan tebakan anda:</h1>
+        <h1>
+            Masukkan tebakan anda:
+            <br>
+            (Pilih angka 1-10)
+        </h1>
         <div class="input-container">
             <input type="text" id="input" required="">
             <label for="input" class="label">Masukkan Angka</label>
