--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div id="goblok" class="goblok">
         <h1>
-            yeeeee goblok
+            yeeeee ngeyel
             <br>
             disuruh ampe 10
             <br>
