--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="pembukaan">
+        <a href="" class="english" style="margin-top: 30px;">ENGLISH VERSION</a>
         <img src="images/welcome.png" alt="" id="selamatDatang">
         <div class="waviy">
             <span style="--i:1">G</span>
@@ -49,7 +50,7 @@
     </div>
     <div id="goblok" class="goblok">
         <h1>
-            yeeeee ngeyel
+            yeeeee goblok
             <br>
             disuruh ampe 10
             <br>
