--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="pembukaan">
-        <a href="" class="english" style="margin-top: 30px;">ENGLISH VERSION</a>
+        <a href="https://gizon123e.github.io/englishVersion/" class="english" style="margin-top: 30px;">ENGLISH VERSION</a>
         <img src="images/welcome.png" alt="" id="selamatDatang">
         <div class="waviy">
             <span style="--i:1">G</span>
